--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* styles.css */
+/* styles.css */
 
 body {
     font-family: Arial, sans-serif;
@@ -20,8 +21,8 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    opacity: 0.5; /* Adjust the opacity as needed */
-    z-index: -1; /* Place the background behind other elements */
+    opacity: 0.5;
+    z-index: -1;
 }
 
 h1 {
@@ -30,7 +31,7 @@ h1 {
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -39,7 +40,7 @@ h1 {
     height: 100%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.7); /* Black with opacity */
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 /* Modal Content/Box */
@@ -66,6 +67,67 @@ h1 {
     cursor: pointer;
 }
 
+/* Feedback modal styles */
+#feedbackModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#feedbackModal .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+#feedbackModal .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#feedbackModal .close:hover,
+#feedbackModal .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.flag {
+    font-size: 24px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+/* Button styling */
+.mainButton, #feedbackBtn {
+    padding: 15px 30px;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-right: 10px;
+    background-color: #e9e9ed; /* Set the background color as needed */
+    color: #333; /* Set the text color as needed */
+    border: 2px solid #8f8f9d; /* Set the border color as needed */
+    border-radius: 10px; /* Adjust the border-radius for rounded corners */
+}
+
+/* Additional styling for the feedback button */
+#feedbackBtn {
+    background-color: #e9e9ed; /* Use the same background color as the main button */
+    color: #333; /* Dark text color, change as needed */
+    border: 2px solid #8f8f9d; /* Dark border, change as needed */
+	border-radius: 10px; /* Adjust the border-radius for rounded corners */
+}
+
 /* Button */
 button {
     padding: 10px 20px;
@@ -73,15 +135,9 @@ button {
     cursor: pointer;
     margin-top: 20px;
 }
-#rollingIcon {
-    display: inline-block; /* Ensures inline elements can have transformations */
-    transition: transform 0.05s ease-in-out; /* Enables smooth transition */
-	margin-right: 50px; /* Adjust the margin as needed */
-}/* Spinning Beer Bottle Image */
-#textContainer {
-    margin-right: 100px;
-}
 
-#imageContainer {
+#rollingIcon {
     display: inline-block;
+    transition: transform 0.05s ease-in-out;
+    margin-right: 50px;
 }
